--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +17,7 @@
     }
   </style>
 </head>
+
 <body>
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous"
@@ -28,6 +30,7 @@
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -58,6 +61,7 @@
         </form>
       </div>
     </nav>
+
     <div class="row">
       <div class="col-9">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -159,27 +163,29 @@
           <img src="https://www.cmru.ac.th/assets/images/link/exchange/300_250.jpg" alt="มหาวิทยาลัยราชภัฏเชียงใหม่"
             class="w-100"></a>
       </div>
+
     </div>
+
     <div class="footer mb-5 mt-5 bg-secondary">
       <div class="row">
         <div class="col-4">
           <h4>ลิงค์ด่วน</h4>
           <ul class="list-unstyled">
             <li><a href="#">หน้าหลัก</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
           </ul>
         </div>
         <div class="col-4">
           <h4>ลิงค์น่าสนใจ</h4>
           <ul class="list-unstyled">
             <li><a href="#">หน้าหลัก</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
+            <li><a href="#">ทดสอบ</a></li>
           </ul>
         </div>
         <div class="col-4">
@@ -194,6 +200,9 @@
       <p>&copy; สงวนสิทธิ์ 2.19, PK</p>
     </div>
   </div>
+
+
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -204,4 +213,5 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
